Import Client/Contact UI Changes (both import/review pages)

--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -40,20 +40,20 @@
             <br>
             <h4> Example Data: </h4>
             <h6><a href="/files/clients.csv" download>Download Template CSV File</a></h6>
-          <div class="table-responsive">
+          <div class="table-responsive text-nowrap">
               <table class="table table-bordered px-2 py-2 bg-white">
                 <thead>
                   <tr>
-                    <th scope="col" class="align-middle">Client Name:</th>
-                    <th scope="col" class="align-middle">Client Phone: </th>
-                    <th scope="col" class="align-middle">Client Fax: </th>
-                    <th scope="col" class="align-middle">Client Address 1: </th>
-                    <th scope="col" class="align-middle">Client Address 2: </th>
-                    <th scope="col" class="align-middle">Client Address 3:</th>
-                    <th scope="col" class="align-middle">Client Address 4: </th>
-                    <th scope="col" class="align-middle">Client Email 1: </th>
-                    <th scope="col" class="align-middle">Client Email 2: </th>
-                    <th scope="col" class="align-middle">Client Notes: </th>
+                    <th scope="col" class="align-middle">Client Name</th>
+                    <th scope="col" class="align-middle">Client Phone</th>
+                    <th scope="col" class="align-middle">Client Fax</th>
+                    <th scope="col" class="align-middle">Client Address 1</th>
+                    <th scope="col" class="align-middle">Client Address 2</th>
+                    <th scope="col" class="align-middle">Client Address 3</th>
+                    <th scope="col" class="align-middle">Client Address 4</th>
+                    <th scope="col" class="align-middle">Client Email 1</th>
+                    <th scope="col" class="align-middle">Client Email 2</th>
+                    <th scope="col" class="align-middle">Client Notes</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -72,6 +72,7 @@
                 </tbody>
               </table>
             </div>
+            <br>
             <h4> Upload File: </h4>
 
            <form action="/import-client" method="post" enctype="multipart/form-data">
