--- a/CRM/views/review-client-upload.ejs
+++ b/CRM/views/review-client-upload.ejs
@@ -31,29 +31,29 @@
 
              <form action="/upload-clients" method="post">
                <input type="text" class="form-control" id="csvData" name="csvData" value="<%= JSONClients %>" hidden>
-          <div class="table-responsive text-nowrap" style=" height: 700px; overflow-y:auto;">
+          <div class="table-responsive text-nowrap" style=" height: 65vh; overflow-y:auto;">
                <table class="table table-bordered px-2 py-2 bg-white">
                  <thead class="thead-dark">
                    <tr>
-                     <th scope="col" class="align-middle">Agent Abbrev:</th>
-                     <th scope="col" class="align-middle">Client Name:</th>
-                     <th scope="col" class="align-middle">Client Phone:</th>
-                     <th scope="col" class="align-middle">Client Fax:</th>
-                     <th scope="col" class="align-middle">Client Address 1:</th>
-                     <th scope="col" class="align-middle">Client Address 1 Type:</th>
-                     <th scope="col" class="align-middle">Client Address 2:</th>
-                     <th scope="col" class="align-middle">Client Address 2 Type:</th>
-                     <th scope="col" class="align-middle">Client Address 3:</th>
-                     <th scope="col" class="align-middle">Client Address 3 Type:</th>
-                     <th scope="col" class="align-middle">Client Address 4:</th>
-                     <th scope="col" class="align-middle">Client Address 4 Type:</th>
-                     <th scope="col" class="align-middle">Client Email 1:</th>
-                     <th scope="col" class="align-middle">Client Email 2:</th>
-                     <th scope="col" class="align-middle">Client Prod OX:</th>
-                     <th scope="col" class="align-middle">Client Prod PP:</th>
-                     <th scope="col" class="align-middle">Client Prod TP:</th>
-                     <th scope="col" class="align-middle">Client Notes:</th>
-                     <th scope="col" class="align-middle">Client Status:</th>
+                     <th scope="col" class="align-middle">Agent Abbrev</th>
+                     <th scope="col" class="align-middle">Client Name</th>
+                     <th scope="col" class="align-middle">Client Phone</th>
+                     <th scope="col" class="align-middle">Client Fax</th>
+                     <th scope="col" class="align-middle">Client Address 1</th>
+                     <th scope="col" class="align-middle">Client Address 1 Type</th>
+                     <th scope="col" class="align-middle">Client Address 2</th>
+                     <th scope="col" class="align-middle">Client Address 2 Type</th>
+                     <th scope="col" class="align-middle">Client Address 3</th>
+                     <th scope="col" class="align-middle">Client Address 3 Type</th>
+                     <th scope="col" class="align-middle">Client Address 4</th>
+                     <th scope="col" class="align-middle">Client Address 4 Type</th>
+                     <th scope="col" class="align-middle">Client Email 1</th>
+                     <th scope="col" class="align-middle">Client Email 2</th>
+                     <th scope="col" class="align-middle">Client Prod OX</th>
+                     <th scope="col" class="align-middle">Client Prod PP</th>
+                     <th scope="col" class="align-middle">Client Prod TP</th>
+                     <th scope="col" class="align-middle">Client Notes</th>
+                     <th scope="col" class="align-middle">Client Status</th>
                    </tr>
                  </thead>
                  <tbody>
