--- a/CRM/views/import-contact.ejs
+++ b/CRM/views/import-contact.ejs
@@ -41,17 +41,17 @@
             <br/>
             <h4> Example Data: </h4>
             <h6><a href="/files/contacts.csv" download>Download Template CSV File</a></h6>
-            <div class="table-responsive">
+            <div class="table-responsive text-nowrap">
             <table class="table table-bordered px-2 py-2 bg-white">
               <thead class="thead-dark">
                 <tr>
-                  <th style="width: 10%" scope="col" class="align-middle">Contact First Name:</th>
-                  <th style="width: 10%" scope="col" class="align-middle">Contact Last Name: </th>
-                  <th style="width: 10%" scope="col" class="align-middle">Contact Position: </th>
-                  <th style="width: 10%" scope="col" class="align-middle">Contact Phone:</th>
-                  <th style="width: 10%" scope="col" class="align-middle">Contact Mobile: </th>
-                  <th style="width: 10%" scope="col" class="align-middle">Contact Email:</th>
-                  <th style="width: 10%" scope="col" class="align-middle">Contact Notes: </th>
+                  <th style="width: 10%" scope="col" class="align-middle">Contact First Name</th>
+                  <th style="width: 10%" scope="col" class="align-middle">Contact Last Name</th>
+                  <th style="width: 10%" scope="col" class="align-middle">Contact Position</th>
+                  <th style="width: 10%" scope="col" class="align-middle">Contact Phone</th>
+                  <th style="width: 10%" scope="col" class="align-middle">Contact Mobile</th>
+                  <th style="width: 10%" scope="col" class="align-middle">Contact Email</th>
+                  <th style="width: 10%" scope="col" class="align-middle">Contact Notes</th>
                 </tr>
                 <tr>
                   <td>John</td>
@@ -64,6 +64,7 @@
               </thead>
             </table>
           </div>
+          <br>
             <h4> Upload File: </h4>
 
             <form action="/import-contact" method="post" enctype="multipart/form-data">
