Permissions page navigation via header partial

--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -116,6 +116,7 @@ TESTING
       <button type="button" class="btn btn-light"> <%- user.username %> </button>
     </a>
     <div class="dropdown-menu dropdown-menu-right pt-0">
+      <a class="dropdown-item" href="/edit-permissions"> Permissions</a>
       <a class="dropdown-item" href="#"> Settings</a>
       <a class="dropdown-item" href="/logout"> Log Out</a>
     </div>
